--- a/src/main/resources/prod/org.taktik.connector.technical.properties
+++ b/src/main/resources/prod/org.taktik.connector.technical.properties
@@ -171,6 +171,8 @@ kgss.createPrescription.ACL.PP.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.PP.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.PP.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.PP.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.PP.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.PP.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 kgss.createPrescription.ACL.P0.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:{saml.quality}:nihii11,
 #kgss.createPrescription.ACL.P0.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:dentist:nihii11,
@@ -179,6 +181,8 @@ kgss.createPrescription.ACL.P0.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.P0.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.P0.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.P0.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.P0.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.P0.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 kgss.createPrescription.ACL.P1.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:{saml.quality}:nihii11,
 #kgss.createPrescription.ACL.P1.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:dentist:nihii11,
@@ -187,6 +191,8 @@ kgss.createPrescription.ACL.P1.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.P1.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.P1.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.P1.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.P1.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.P1.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 kgss.createPrescription.ACL.P2.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:{saml.quality}:nihii11,
 #kgss.createPrescription.ACL.P2.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:dentist:nihii11,
@@ -195,6 +201,8 @@ kgss.createPrescription.ACL.P2.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.P2.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.P2.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.P2.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.P2.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.P2.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 kgss.createPrescription.ACL.PK.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:{saml.quality}:nihii11,
 #kgss.createPrescription.ACL.PK.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:dentist:nihii11,
@@ -203,6 +211,8 @@ kgss.createPrescription.ACL.PK.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.PK.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.PK.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.PK.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.PK.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.PK.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 kgss.createPrescription.ACL.PN.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:{saml.quality}:nihii11,
 #kgss.createPrescription.ACL.PN.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:dentist:nihii11,
@@ -211,6 +221,8 @@ kgss.createPrescription.ACL.PN.1=urn:be:fgov:certified-namespace:ehealth,urn:be:
 #kgss.createPrescription.ACL.PN.1=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:nihii:physiotherapist:nihii11,
 kgss.createPrescription.ACL.PN.2=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:pharmacy:nihii-number:recognisedpharmacy:boolean,true
 kgss.createPrescription.ACL.PN.3=urn:be:fgov:identification-namespace,urn:be:fgov:person:ssin,%PATIENT_ID%
+kgss.createPrescription.ACL.PN.4=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:person:ssin:ehealth:1.0:doctor:nihii11,
+kgss.createPrescription.ACL.PN.5=urn:be:fgov:certified-namespace:ehealth,urn:be:fgov:ehealth:1.0:hospital:nihii-number,
 
 validation.expirationDate.days=365
 expirationdate.xpath=/kmehrmessage/folder/transaction/expirationdate
